--- a/pages/pagamenti/fatture/fatture.css
+++ b/pages/pagamenti/fatture/fatture.css
@@ -2,7 +2,6 @@ td,th {
     white-space: normal!important;
     word-break: break-word!important;
 }
-
 .filter-labels{
     height: 80px;
     min-height: 80px;
@@ -32,13 +31,11 @@ td,th {
     flex-direction: column;
     overflow: hidden; /* Prevents content from overflowing */
 }
-
 .floating-menu .content {
     flex: 1;
     overflow-y: auto;
     padding-bottom: 60px;
 }
-
 .floating-menu .sticky-bottom {
     position: absolute;
     bottom: 0;
@@ -46,7 +43,6 @@ td,th {
     background: transparent;
     padding: 10px;
 }
-
 .floating-menu.open {
     right: 0;
 }
@@ -63,54 +59,10 @@ td,th {
     background-color: transparent;
     border: none;
 }
-
-.floating-excel-btn {
-    position: fixed;
-    bottom: 10px;
-    transition: right 0.3s ease;
-    z-index: 1021;
-    right: 10px;
-    background-color: #9bc79b;
-    padding: 10px;
-    border-radius: 50%;
-    border: none;
-    cursor: pointer;
-}
-.floating-excel-btn:hover {
-    border: solid green 5px;
-    background-color: white;
-}
-
-.floating-excel-btn.open {
-    right: 260px;
-}
-
-.floating-download-fatture-btn {
-    position: fixed;
-    bottom: 100px;
-    transition: right 0.3s ease;
-    z-index: 1021;
-    right: 10px;
-    background-color: #f0bac1;
-    padding: 10px;
-    border-radius: 50%;
-    border: none;
-    cursor: pointer;
-}
-.floating-download-fatture-btn:hover {
-    border: solid #d4263a 5px;
-    background-color: white;
-}
-
-.floating-download-fatture-btn.open {
-    right: 260px;
-}
-
 .floating-menu-btn.open {
     right: 210px;
     background-color: transparent;
 }
-
 .floating-menu-btn > button.left{
     width: 40px;
     border: solid rgba(var(--base-bg-primary-rgb), 0.1) 1px;
@@ -121,7 +73,6 @@ td,th {
 .floating-menu-btn.open > button.left{
     display: none;
 }
-
 .floating-menu-btn.open > button.right{
     width: 40px;
     border: solid rgba(var(--base-bg-primary-rgb), 0.1) 1px;
@@ -129,8 +80,102 @@ td,th {
     background-color: rgba(var(--base-bg-primary-rgb), 0.1);
     display: block;
 }
-
 .floating-menu-btn > button.right{
     display: none;
 }
 
+.floating-input-fatture {
+    position: fixed;
+    bottom: 110px;
+    transition: right 0.3s ease;
+    z-index: 1021;
+    right: 10px;
+    background-color: var(--base-bg-colorfull2);
+    padding: 10px;
+    border-radius: 50%;
+    border: none;
+    cursor: pointer;
+}
+.floating-input-fatture:hover > .tip {
+    display: block!important;
+    bottom: 114px;
+    right: 80px;
+    border: solid var(--base-bg-colorfull2) 5px;
+}
+.floating-input-fatture:hover svg {
+    fill: black!important;
+    width: 40px;
+    height: 40px;
+}
+.floating-input-fatture:hover {
+    border: solid var(--base-bg-colorfull2) 5px;
+    background-color: white;
+}
+
+.floating-input-fatture.open {
+    right: 260px;
+}
+
+.floating-excel-btn {
+    position: fixed;
+    bottom: 10px;
+    transition: right 0.3s ease;
+    z-index: 1021;
+    right: 10px;
+    background-color: var(--base-bg-colorfull3);
+    padding: 10px;
+    border-radius: 50%;
+    border: none;
+    cursor: pointer;
+}
+.floating-excel-btn:hover > .tip {
+    display: block!important;
+    bottom: 14px;
+    right: 80px;
+    border: solid var(--base-bg-colorfull3) 5px;
+}
+.floating-excel-btn:hover {
+    border: solid var(--base-bg-colorfull3) 5px;
+    background-color: white;
+    z-index: 1099;
+}
+.floating-excel-btn:hover svg {
+    fill: black!important;
+    width: 40px;
+    height: 40px;
+}
+.floating-excel-btn.open {
+    right: 260px;
+}
+
+.floating-download-fatture-btn {
+    position: fixed;
+    bottom: 60px;
+    transition: right 0.3s ease;
+    z-index: 1021;
+    right: 10px;
+    background-color: var(--base-bg-colorfull4);
+    padding: 10px;
+    border-radius: 50%;
+    border: none;
+    cursor: pointer;
+}
+.floating-download-fatture-btn:hover > .tip {
+    display: block!important;
+    bottom: 64px;
+    right: 80px;
+    border: solid var(--base-bg-colorfull4) 5px;
+}
+.floating-download-fatture-btn:hover {
+    border: solid var(--base-bg-colorfull4) 5px;
+    background-color: white;
+    z-index: 1099;
+}
+.floating-download-fatture-btn:hover svg {
+    fill: black!important;
+    width: 40px;
+    height: 40px;
+}
+.floating-download-fatture-btn.open {
+    right: 260px;
+}
