--- a/assets/css/bootstrap-5.3.3.css
+++ b/assets/css/bootstrap-5.3.3.css
@@ -9633,7 +9633,7 @@ fieldset:disabled .btn {
 	padding: 0.5rem !important;
 }
 
-.p-3 {
+.justify-contents-center {
 	padding: 1rem !important;
 }
 
