--- a/assets/css/bootstrap-5.3.3.css
+++ b/assets/css/bootstrap-5.3.3.css
@@ -9633,6 +9633,10 @@ fieldset:disabled .btn {
 	padding: 0.5rem !important;
 }
 
+.p-3 {
+	padding: 1rem !important;
+}
+
 .justify-contents-center {
 	padding: 1rem !important;
 }
@@ -14453,6 +14457,10 @@ p.psm {
 	width: 5% !important;
 }
 
+.w-7 {
+	width: 7% !important;
+}
+
 .w-10 {
 	width: 10% !important;
 }
@@ -14475,6 +14483,12 @@ p.psm {
 	width: 30% !important;
 	min-width: 110px !important;
 }
+
+.w-33 {
+	width: 33% !important;
+	min-width: 110px !important;
+}
+
 
 .w-35 {
 	width: 35% !important;
