--- a/modal_component/percorsi_pendenze/percorsi_pendenze.css
+++ b/modal_component/percorsi_pendenze/percorsi_pendenze.css
@@ -1,39 +1,12 @@
-.table-responsive:not(.title) {
-    border: solid rgba(128, 128, 128, 0.501) 1px;
-    border-radius: 5px;
+.floating-btns{
+    padding: 20px;
+    padding-bottom: 0px;
+    z-index: 1055!important;
+    position:absolute;
+    width: 100vw;
+    top:0;
+    left:0;
 }
-
-.fattura_row{
-    padding: 10px;
-    height: 50px!important;
-}
-
-.fattura_row.checked{
+.checked{
     background-color: var(--base-bg-light);
-}
-
-.titles > .cc1,
-.flex-row > .cc1 {
-    width: 5%;
-}
-
-.titles > .cc4,
-.flex-row > .cc4 {
-    width: 23%;
-}
-
-.d-flex {
-    display: flex;
-}
-
-.align-items-center {
-    align-items: center;
-}
-
-.justify-content-center {
-    justify-content: center;
-}
-
-.text-center {
-    text-align: center;
 }
