--- a/modal_component/percorsi/percorsi.css
+++ b/modal_component/percorsi/percorsi.css
@@ -76,3 +76,30 @@
     background-color: var(--bs-green)!important;
     margin-right:5px;
 }
+
+.color-box-neutro {
+    width:20px;
+    height:20px;
+    border:1px solid white;
+    border-radius:3px;
+    vertical-align:middle;
+    background-color: transparent;
+}
+
+.color-box-black {
+    width:20px;
+    height:20px;
+    border:1px solid black;
+    border-radius:3px;
+    vertical-align:middle;
+    background-color: black;
+}
+
+.color-box-white {
+    width:20px;
+    height:20px;
+    border:1px solid black;
+    border-radius:3px;
+    vertical-align:middle;
+    background-color: white;
+}
