--- a/modal_component/percorsi_pendenze/percorsi_pendenze.css
+++ b/modal_component/percorsi_pendenze/percorsi_pendenze.css
@@ -14,3 +14,30 @@
 .Parziale, .Fatturato{
     background-color: var(--bs-warning);
 }
+
+.color-box-neutro {
+    width:20px;
+    height:20px;
+    border:1px solid white;
+    border-radius:3px;
+    vertical-align:middle;
+    background-color: transparent;
+}
+
+.color-box-black {
+    width:20px;
+    height:20px;
+    border:1px solid black;
+    border-radius:3px;
+    vertical-align:middle;
+    background-color: black;
+}
+
+.color-box-white {
+    width:20px;
+    height:20px;
+    border:1px solid black;
+    border-radius:3px;
+    vertical-align:middle;
+    background-color: white;
+}
