--- a/pages/pagamenti/sedute/sedute.css
+++ b/pages/pagamenti/sedute/sedute.css
@@ -11,6 +11,8 @@ td,th {
     min-height: 30px;
 }
 .filter-label{
+    max-height: 80px;
+    overflow: hidden!important;
     margin-left: 10px;
     padding: 7px;
     border-radius: 7px;
@@ -18,11 +20,11 @@ td,th {
 }
 .floating-menu {
     position: fixed;
-    right: -250px;
+    right: -350px;
     top: 50%;
     transform: translateY(-50%);
     transition: right 0.3s ease;
-    width: 250px;
+    width: 350px;
     height: 100vh;
     background-color: #f8f9fa;
     z-index: 1020;
@@ -60,7 +62,7 @@ td,th {
     border: none;
 }
 .floating-menu-btn.open {
-    right: 210px;
+    right: 310px;
     background-color: transparent;
 }
 .floating-menu-btn > button.left{
@@ -111,7 +113,7 @@ td,th {
     background-color: white;
 }
 .floating-input-sedute.open {
-    right: 260px;
+    right: 360px;
 }
 .floating-excel-btn {
     position: fixed;
@@ -142,7 +144,7 @@ td,th {
     height: 40px;
 }
 .floating-excel-btn.open {
-    right: 260px;
+    right: 360px;
 }
 .floating-download-pdf-btn {
     position: fixed;
@@ -173,5 +175,10 @@ td,th {
     height: 40px;
 }
 .floating-download-pdf-btn.open {
-    right: 260px;
+    right: 360px;
 }
+
+.bootstrap-select .filter-option-inner-inner {
+  white-space: normal !important;
+}
+
